[package]
name = "karty"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/moroviintaas/karty"
license-file = "LICENSE"
keywords = ["game", "card",  "deck"]
categories = ["games"]
description = "Implementation playing cards"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom= {version= "8.0.0", optional = true}
array2d = {version = "0.3.2", optional = true}
rand = {version = "0.9.2", optional = true}

num-integer = "0.1.46"
serde = {version = "1.0.218", optional = true, features= ["derive"]}
speedy = {version = "0.8.7", optional =true}
#speedy = {git = "https://github.com/koute/speedy", optional =true}
#bincode = {version = "1.3.3", optional = true}
serde_json = {version = "1.0.139", optional = true}
comparator = "0.3.0"
postcard = {version = "1.1.1", optional = true}
ron = {version = "0.8.1", optional = true}
itertools = "0.14.0"
smallvec = "1.13.2"
approx = "0.5.1"
serde-big-array = "0.5.1"
thiserror = "2.0.12"

karty_proc_macro = { version = "0.3.0" }

[features]
parse= ["dep:nom"]
register = ["dep:array2d"]
random = ["dep:rand"]
#serde_json = ["dep:serde", "dep:serde_json"]
speedy = ["dep:speedy"]
serde = ["dep:serde", "serde_ron", "parse"]
serde_postcard = ["dep:serde", "dep:postcard", "serde"]
serde_ron = ["dep:serde", "dep:ron"]
fuzzy = []


# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]


