[package]
name = "karty_proc_macro"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/moroviintaas/karty_proc_macro"
license-file = "LICENSE"
keywords = ["game", "card", "deck"]
categories = ["games"]
description = "Procedural macros for crate `karty`"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
syn = "2.0.101"
quote = "1.0.40"
rand = "0.9.2"
